--- a/app/design/adminhtml/default/default/template/system/autocomplete.phtml
+++ b/app/design/adminhtml/default/default/template/system/autocomplete.phtml
@@ -13,10 +13,14 @@
 ?>
 <ul>
 <?php foreach ($items as $item): ?>
-    <li id="<?= $item['id'] ?>" url="<?= $item['url'] ?>">
-        <div style="float:right; color:red; font-weight:bold;">[<?= $item['type'] ?>]</div>
-        <strong><?= $this->escapeHtml($item['name']) ?></strong><br/>
-        <span class="informal"><?= $this->escapeHtml($item['description']) ?></span>
+    <li id="<?= $item['id'] ?>">
+        <a href="<?= $item['url'] ?>">
+            <div>
+                <strong><?= $this->escapeHtml($item['name']) ?></strong><br>
+                <span class="informal"><?= $this->escapeHtml($item['description']) ?></span>
+            </div>
+            <div class="chip-accent"><?= $item['type'] ?></div>
+        </a>
     </li>
 <?php endforeach ?>
 </ul>
