--- a/app/design/frontend/base/default/template/catalogsearch/suggest.phtml
+++ b/app/design/frontend/base/default/template/catalogsearch/suggest.phtml
@@ -13,10 +13,12 @@ $productList = $this->getLayout()->createBlock('core/template')
     ->setLoadedProductCollection($this->getLoadedProductCollection())
     ->setTemplate('catalog/product/list.phtml');
 ?>
-<?= $productList->toHtml() ?>
-
 <?php if ($numResults): ?>
-<a class="view-all" href="ciaociao">
-    <?= $this->__("View all %s results", $numResults) ?>
-</a>
+    <a class="view-all" href="ciaociao">
+        <?= $this->__("View all %s results", $numResults) ?>
+    </a>
 <?php endif ?>
+
+<div class="results-list">
+    <?= $productList->toHtml() ?>
+</div>
