--- a/app/design/install/default/default/template/install/end.phtml
+++ b/app/design/install/default/default/template/install/end.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2020-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -18,12 +18,7 @@
     <iframe id="iframe_box" src="<?= $this->getIframeSourceUrl() ?>" frameborder="0" width="650" height="600"></iframe>
 <?php endif ?>
 <p><?= $this->__('Get ready to experience Open-Source eCommerce Evolved.') ?></p>
-<?php if($this->getEncryptionKey()): ?>
-<p><?= $this->__('Before you continue to your store, please make a note of your encryption key (Maho uses it to encrypt passwords, credit cards and more).') ?></p>
-<p><strong><big><?= $this->getEncryptionKey() ?></big></strong></p>
-<p><?= $this->__('(Make sure you keep it in a safe place.)') ?></p>
-<?php endif ?>
-<div class="button-set">
+<p>
     <button class="form-button" onclick="window.open('<?= $this->getUrl('') ?>')" type="button"><?= $this->__('Go to Frontend') ?></button>&nbsp;&nbsp;
     <button class="form-button" onclick="window.open('<?= $this->getUrl('adminhtml') ?>')" type="button"><?= $this->__('Go to Backend') ?></button>
-</div>
+</p>
