--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -6796,8 +6796,15 @@ div.paypal-logo span > img {
   margin-right: 1rem;
   border: none;
 }
-.search-autocomplete .products-grid li > div > ul, .search-autocomplete :is(.product-secondary,.desc) {
+.search-autocomplete .products-grid li > div > ul, .search-autocomplete :is(.product-secondary,.desc,.rating-links,.minimal-price-link) {
   display: none !important;
+}
+.search-autocomplete .product-secondary:has(.price-box) {
+  display: block !important;
+  float: left;
+}
+.search-autocomplete .price-box {
+  display: flex;
 }
 .search-autocomplete :is(.product-primary,.product-shop) {
   float: none !important;
@@ -6813,8 +6820,8 @@ div.paypal-logo span > img {
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
-.search-autocomplete .products-list .product-name a {
-  font-size: 0.813rem;;
+.search-autocomplete .products-list :is(.product-name a, .price) {
+  font-size: 0.938rem !important;
   text-transform: none;
   font-weight: 500;
 }
