--- a/app/design/frontend/base/default/template/catalogsearch/suggest.phtml
+++ b/app/design/frontend/base/default/template/catalogsearch/suggest.phtml
@@ -13,7 +13,7 @@ $productList = $this->getLayout()->createBlock('catalogsearch/autocomplete_produ
 $numResults = count($productList->getLoadedProductCollection());
 ?>
 <?php if ($numResults): ?>
-    <a class="view-all" href="ciaociao">
+    <a class="view-all" onclick="document.getElementById('search_mini_form').submit()" href="#">
         <?= $this->__("View all %s results", $numResults) ?>
     </a>
 <?php endif ?>
