--- a/app/design/adminhtml/default/default/template/system/config/tabs.phtml
+++ b/app/design/adminhtml/default/default/template/system/config/tabs.phtml
@@ -24,7 +24,7 @@
         <?php $_iterator = 1; ?>
         <?php foreach ($_tab->getSections() as $_section): ?>
             <dd>
-                <a href="<?= $_section->getUrl() ?>" class="<?= $_section->getClass() ?><?php if($_section->getId()==$this->getActiveSection()): ?> active<?php endif ?> <?= $_section->getIsLast()?'last':'' ?>">
+                <a href="<?= $_section->getUrl() ?>" id="section-<?php echo $_section->getId() ?>" class="<?= $_section->getClass() ?><?php if($_section->getId()==$this->getActiveSection()): ?> active<?php endif ?> <?= $_section->getIsLast()?'last':'' ?>">
                     <span <?php if($_tab->getId()==$this->getActiveTab()): ?>class="active"<?php endif ?>>
                         <?= $_section->getLabel() ?>
                     </span>
