Mage::getVersion now returns Maho version

--- a/app/design/adminhtml/default/default/template/page/footer.phtml
+++ b/app/design/adminhtml/default/default/template/page/footer.phtml
@@ -12,7 +12,7 @@
 /** @var Mage_Adminhtml_Block_Page_Footer $this */
 ?>
 
-<a href="<?= $this->getMahoProjectUrl() ?>" target="_blank">Powered by Maho <?= Mage::getMahoVersion() ?></a>
+<a href="<?= $this->getMahoProjectUrl() ?>" target="_blank">Powered by Maho <?= Mage::getVersion() ?></a>
 <span>|</span>
 <?= $this->__('Interface Locale: %s', $this->getLanguageSelect()) ?>
 
