--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -59,7 +59,7 @@
 <div class="footer-container">
     <div class="footer">
         <p class="legality">
-            <a href="https://mahocommerce.com" target="_blank">Powered by Maho <?= Mage::getMahoVersion() ?></a>
+            <a href="https://mahocommerce.com" target="_blank">Powered by Maho <?= Mage::getVersion() ?></a>
         </p>
     </div>
 </div>
