--- a/app/design/frontend/base/default/template/googleanalytics/gtm.phtml
+++ b/app/design/frontend/base/default/template/googleanalytics/gtm.phtml
@@ -5,10 +5,10 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2023 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
+
 /** @var Mage_GoogleAnalytics_Block_Gtm $this */
 $_helper = $this->helper('googleanalytics');
 ?>
