--- a/app/design/frontend/base/default/layout/googleanalytics.xml
+++ b/app/design/frontend/base/default/layout/googleanalytics.xml
@@ -21,6 +21,7 @@ Default layout, loads most of the pages
         <reference name="head" before="-">
             <block type="googleanalytics/gtm" name="google_tag_manager" as="google_tag_manager" template="googleanalytics/gtm.phtml" />
             <block type="googleanalytics/ga" name="google_analytics" as="google_analytics" template="googleanalytics/ga.phtml" />
+            <block type="googleanalytics/metapixel" name="meta_pixel" as="meta_pixel" template="googleanalytics/metapixel.phtml" />
         </reference>
     </default>
 </layout>
