Fix for Mage::getVersion()

--- a/app/design/adminhtml/default/default/template/page/header.phtml
+++ b/app/design/adminhtml/default/default/template/page/header.phtml
@@ -12,7 +12,7 @@
 /** @var Mage_Adminhtml_Block_Page_Header $this */
 ?>
 <div class="header-top">
-    <a href="<?= $this->getHomeLink() ?>" class="logo" title="Maho <?= Mage::getMahoVersion() ?>">
+    <a href="<?= $this->getHomeLink() ?>" class="logo" title="Maho <?= Mage::getVersion() ?>">
         <svg viewBox="0 0 242 237" xmlns="http://www.w3.org/2000/svg"><path d="M199 34c4 0 8 4 8 8v77c0 46-38 84-85 84H43c-4 0-8-4-8-8v-82c0-43 36-79 80-79h84zm-79 29c-30 0-54 25-54 55a54 54 0 0 0 109 0c0-30-25-55-55-55z" fill="#d7df22"/></svg>
     </a>
     <ul id="usermenu">
