Removed toolbar-bottom, added label id for accessibility

--- a/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
@@ -21,8 +21,8 @@
     <?php if( $this->isExpanded() ): ?>
         <div class="sorter">
             <div class="sort-by">
-                <label><?= $this->__('Sort By') ?></label>
-                <select onchange="window.location.href=this.value" title="<?= $this->quoteEscape($this->__('Sort By')) ?>">
+                <label for="toolbar-sortby"><?= $this->__('Sort By') ?></label>
+                <select id="toolbar-sortby" onchange="window.location.href=this.value" title="<?= $this->quoteEscape($this->__('Sort By')) ?>">
                     <?php foreach($this->getAvailableOrders() as $_key => $_order): ?>
                         <option value="<?= $this->getOrderUrl($_key, 'asc') ?>"<?php if($this->isOrderCurrent($_key)): ?> selected="selected"<?php endif ?>>
                             <?= $this->__($_order) ?>
