--- a/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
@@ -8,13 +8,8 @@
  * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
-/**
- * Product list toolbar
- *
- * @var Mage_Catalog_Block_Product_List_Toolbar $this
- */
+
+/** * @var Mage_Catalog_Block_Product_List_Toolbar $this */
 ?>
 <?php if($this->getCollection()->getSize()): ?>
 <div class="toolbar">
