Added `caption` element to `product-attribute-specs-table` for accessibility

--- a/app/design/frontend/base/default/template/catalog/product/view/attributes.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/attributes.phtml
@@ -5,16 +5,11 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Product additional attributes template
- *
- * @see Mage_Catalog_Block_Product_View_Attributes
- * @var Mage_Catalog_Block_Product_View_Attributes $this
- */
+/** @var Mage_Catalog_Block_Product_View_Attributes $this */
 ?>
 <?php
     $_helper = $this->helper('catalog/output');
@@ -23,6 +18,7 @@
 <?php if($_additional = $this->getAdditionalData()): ?>
     <h2><?= $this->__('Additional Information') ?></h2>
     <table class="data-table" id="product-attribute-specs-table">
+        <caption><?= $this->__('Additional Information') ?></caption>
         <col width="25%" />
         <col />
         <tbody>
