--- a/app/design/frontend/base/default/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/addtocart.phtml
@@ -18,7 +18,7 @@
         <?php if(!$_product->isGrouped()): ?>
         <div class="qty-wrapper">
             <label for="qty"><?= $this->__('Qty:') ?></label>
-            <input type="text" pattern="\d*(\.\d+)?" name="qty" id="qty" maxlength="12" value="<?= $this->getProductDefaultQty() * 1 ?>" title="<?= $this->quoteEscape($this->__('Qty')) ?>" class="input-text qty" />
+            <input type="text" pattern="\d*(\.\d+)?" name="qty" id="qty" maxlength="12" value="<?= $this->getProductDefaultQty() * 1 ?>" title="<?= $this->quoteEscape($this->__('Qty')) ?>" class="input-text qty" aria-required="true" />
         </div>
         <?php endif ?>
         <div class="add-to-cart-buttons">
