--- a/app/design/frontend/base/default/template/catalogsearch/form.mini.phtml
+++ b/app/design/frontend/base/default/template/catalogsearch/form.mini.phtml
@@ -13,8 +13,7 @@
 /** @var Mage_CatalogSearch_Helper_Data $catalogSearchHelper */
 $catalogSearchHelper =  $this->helper('catalogsearch');
 ?>
-
-<form id="search_mini_form" action="<?= $catalogSearchHelper->getResultUrl() ?>" method="get">
+<form role="search" id="search_mini_form" action="<?= $catalogSearchHelper->getResultUrl() ?>" method="get">
     <div class="input-box">
         <label for="search"><?= $this->__('Search:') ?></label>
         <input id="search" type="search" name="<?= $catalogSearchHelper->getQueryParamName() ?>" value="<?= $catalogSearchHelper->getEscapedQueryText() ?>" class="input-text required-entry" maxlength="<?= $catalogSearchHelper->getMaxQueryLength();?>" placeholder="<?= $this->quoteEscape($this->__('Search entire store here...')) ?>" />
