--- a/app/design/frontend/base/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/base/default/template/newsletter/subscribe.phtml
@@ -22,7 +22,7 @@
                 <label for="newsletter"><?= $this->__('Sign Up for Our Newsletter:') ?></label>
             </div>
             <div class="input-box">
-               <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?= $this->quoteEscape($this->__('Sign up for our newsletter')) ?>" class="input-text required-entry validate-email" />
+               <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?= $this->quoteEscape($this->__('Sign up for our newsletter')) ?>" class="input-text required-entry validate-email" aria-required="true" />
             </div>
             <div class="actions">
                 <button type="submit" title="<?= $this->quoteEscape($this->__('Subscribe')) ?>" class="button"><?= $this->__('Subscribe') ?></button>
