--- a/app/design/frontend/base/default/template/review/customer/view.phtml
+++ b/app/design/frontend/base/default/template/review/customer/view.phtml
@@ -28,18 +28,19 @@
         <?php if( $this->getRating() && $this->getRating()->getSize()): ?>
         <h3><?= ($this->isReviewOwner()) ? $this->__('Your Rating:') : $this->__('Rating:') ?></h3>
         <table class="ratings-table">
-        <?php foreach ($this->getRating() as $_rating): ?>
-        <?php if($_rating->getPercent()): ?>
-            <tr>
-                <th><?= $this->escapeHtml($_rating->getRatingCode()) ?></th>
-                <td>
-                    <div class="rating-box">
-                        <div class="rating" style="width:<?= ceil($_rating->getPercent()) ?>%;"></div>
-                    </div>
-                </td>
-            </tr>
-        <?php endif ?>
-        <?php endforeach ?>
+            <caption><?= $this->__('Rating:') ?></caption>
+            <?php foreach ($this->getRating() as $_rating): ?>
+                <?php if($_rating->getPercent()): ?>
+                    <tr>
+                        <th><?= $this->escapeHtml($_rating->getRatingCode()) ?></th>
+                        <td>
+                            <div class="rating-box">
+                                <div class="rating" style="width:<?= ceil($_rating->getPercent()) ?>%;"></div>
+                            </div>
+                        </td>
+                    </tr>
+                <?php endif ?>
+            <?php endforeach ?>
         </table>
         <?php endif ?>
         <dl class="ratings-description">
