--- a/app/design/frontend/base/default/template/review/product/view/list.phtml
+++ b/app/design/frontend/base/default/template/review/product/view/list.phtml
@@ -38,6 +38,7 @@
 
                 <?php if (count($_votes) > 1): ?>
                 <table class="ratings-table">
+                    <caption><?= $this->__('Rating:') ?></caption>
                     <tbody>
                         <?php foreach ($_votes as $_vote): ?>
                         <tr>
